--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -3,12 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@drawable/green_rectangle">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -22,7 +22,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="68dp"
             android:layout_marginTop="30dp"
-            android:text="11111111"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/gotohome" />
@@ -32,7 +31,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="68dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="5dp"
             android:text="Spiral Result"
             android:textSize="26sp"
             android:textStyle="bold"
@@ -44,8 +43,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="68dp"
-            android:layout_marginTop="8dp"
-            android:text="2019.08.20 04:12"
+            android:layout_marginTop="5dp"
             android:textSize="20sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/testTitle" />
@@ -128,7 +126,7 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/pre_spiral"
+                    android:id="@+id/pre_result_image"
                     android:layout_width="277.92dp"
                     android:layout_height="280dp"
                     android:layout_gravity="center_horizontal"
@@ -155,7 +153,6 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="0.1"
-                    android:text="(18.05)"
                     android:textColor="#545454"
                     android:textSize="14dp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -170,6 +167,7 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/result_image"
                     android:layout_width="277.92dp"
                     android:layout_height="280dp"
                     android:layout_gravity="center_horizontal"
@@ -183,7 +181,7 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="0.1"
-                    android:text="직전 결과"
+                    android:text="이번 결과"
                     android:textColor="#545454"
                     android:textSize="20dp"
                     android:textStyle="bold"
@@ -191,11 +189,11 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
+                    android:id="@+id/result_date"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_weight="0.1"
-                    android:text="(18.05)"
                     android:textColor="#545454"
                     android:textSize="14dp"
                     app:layout_constraintStart_toStartOf="parent"
@@ -282,7 +280,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:text="떨림의 주파수"
+                    android:text="떨림의 주파수(1초에 손을 떤 횟수)"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_chainStyle="spread"
@@ -297,7 +295,6 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:gravity="center"
-                    android:text="직전결과"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -337,7 +334,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:text="떨림의 세기"
+                    android:text="떨림의 세기(떨림의 범위)"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_chainStyle="spread"
@@ -352,7 +349,6 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:gravity="center"
-                    android:text="직전결과"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -407,7 +403,6 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:gravity="center"
-                    android:text="직전결과"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -462,7 +457,6 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:gravity="center"
-                    android:text="직전결과"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -517,7 +511,6 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:gravity="center"
-                    android:text="직전결과"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -546,6 +539,7 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/result_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
@@ -560,5 +554,33 @@
             android:textSize="20sp"
             android:background="@drawable/white_rounded"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
+
+        <android.support.constraint.ConstraintLayout
+            android:id="@+id/spiral_graph"
+            android:layout_width="match_parent"
+            android:layout_height="430dp"
+            android:layout_marginEnd="50dp"
+            android:layout_marginStart="50dp"
+            app:layout_constraintTop_toBottomOf="@+id/result_button" >
+
+            <android.support.design.widget.TabLayout
+                android:id="@+id/measure"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toTopOf="parent">
+
+            </android.support.design.widget.TabLayout>
+            <com.jjoe64.graphview.GraphView
+                android:id="@+id/graph"
+                android:layout_width="match_parent"
+                android:layout_height="380dp"
+                app:layout_constraintTop_toBottomOf="@+id/measure" >
+            </com.jjoe64.graphview.GraphView>
+
+        </android.support.constraint.ConstraintLayout>
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            app:layout_constraintTop_toBottomOf="@+id/spiral_graph"/>
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
