--- a/app/src/main/res/layout/fragment_patient_list.xml
+++ b/app/src/main/res/layout/fragment_patient_list.xml
@@ -28,7 +28,7 @@
                 android:layout_marginStart="@dimen/patientListStart"
                 android:layout_marginTop="@dimen/patientListTop"
                 android:text="Patients List"
-                android:textColor="#1F6A5D"
+                android:textColor="@color/many"
                 android:textSize="@dimen/textSize1"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -40,8 +40,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/patientListStart"
                 android:layout_marginTop="0.1dp"
-                android:text="Total 3"
-                android:textColor="#1F6A5D"
+                android:textColor="@color/many"
                 android:textSize="@dimen/textSize2"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView" />
