toolbar, line 검사 후 저장, 불러오기

--- a/app/src/main/res/layout/activity_patient_list.xml
+++ b/app/src/main/res/layout/activity_patient_list.xml
@@ -10,7 +10,8 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/small"
+        android:background="#FFFFFF"
+        app:titleTextColor="#000000"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme" />
 
