--- a/app/src/main/res/layout/activity_spiral.xml
+++ b/app/src/main/res/layout/activity_spiral.xml
@@ -11,7 +11,7 @@
         android:layout_width="@dimen/H50"
         android:layout_height="@dimen/H50"
         android:layout_marginBottom="@dimen/imageWeight"
-        android:layout_marginStart="@dimen/imageWeight"
+        android:layout_marginStart="@dimen/patientListMargin"
         android:background="@drawable/green_down"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -20,9 +20,9 @@
         android:id="@+id/writingcanvasLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="65dp"
+        android:layout_marginStart="@dimen/W65"
         android:layout_marginTop="@dimen/patientListMargin"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="@dimen/W10"
         android:layout_marginBottom="@dimen/patientListMargin"
         android:background="@drawable/black_rectangle"
         android:orientation="vertical"
@@ -38,7 +38,7 @@
         android:id="@+id/writingfinish"
         android:layout_width="@dimen/W150"
         android:layout_height="@dimen/H50"
-        android:layout_marginEnd="695dp"
+        android:layout_marginEnd="@dimen/W695"
         android:layout_marginTop="@dimen/personalBack"
         android:text="다음"
         android:rotation="270"
@@ -51,8 +51,8 @@
         android:id="@+id/writingagain"
         android:layout_width="@dimen/W150"
         android:layout_height="@dimen/H50"
-        android:layout_marginTop="120dp"
-        android:layout_marginEnd="695dp"
+        android:layout_marginTop="@dimen/H120"
+        android:layout_marginEnd="@dimen/W695"
         android:background="@drawable/green_rounded"
         android:rotation="270"
         android:text="다시"
