환자 리스트 기능 모두 추가(date sort, 삭제 처리 제외)

--- a/app/src/main/res/layout/activity_spiral.xml
+++ b/app/src/main/res/layout/activity_spiral.xml
@@ -12,7 +12,7 @@
         android:layout_height="@dimen/H50"
         android:layout_marginBottom="@dimen/imageWeight"
         android:layout_marginStart="@dimen/patientListMargin"
-        android:background="@drawable/green_down"
+        android:background="@drawable/ic_action_down"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
