--- a/app/src/main/res/drawable/green_gradient_rounded.xml
+++ b/app/src/main/res/drawable/green_gradient_rounded.xml
@@ -2,8 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:startColor="#8FE1A1"
-        android:endColor="#37BFA7"
+        android:startColor="#85C1E9"
+        android:endColor="#6C88DC"
         />
     <corners
         android:bottomLeftRadius="5dp"
