--- a/app/src/main/res/drawable/green_rounded.xml
+++ b/app/src/main/res/drawable/green_rounded.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="#1F6A5D"></solid>
+    <solid android:color="#3244AC"></solid>
     <corners
         android:bottomLeftRadius="5dp"
         android:bottomRightRadius="5dp"
