--- a/app/src/main/res/layout/activity_personal_patient.xml
+++ b/app/src/main/res/layout/activity_personal_patient.xml
@@ -28,7 +28,7 @@
         app:tabMode="fixed"
         android:textAllCaps="false"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
-        app:tabIndicatorColor="#37BFA7"
+        app:tabIndicatorColor="@color/primary"
         app:tabTextColor="#545454">
 
     </android.support.design.widget.TabLayout>
