--- a/app/src/main/res/layout/activity_task_select.xml
+++ b/app/src/main/res/layout/activity_task_select.xml
@@ -12,7 +12,7 @@
         android:layout_height="50dp"
         android:layout_marginBottom="@dimen/imageWeight"
         android:layout_marginStart="@dimen/imageWeight"
-        android:background="@drawable/green_down"
+        android:background="@drawable/ic_action_down"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
