--- a/app/src/main/res/menu/patient_list_toolbar.xml
+++ b/app/src/main/res/menu/patient_list_toolbar.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/add"
+        android:id="@+id/add_patient"
         android:icon="@drawable/ic_action_name"
         android:title="Item"
         app:showAsAction="always" />
