--- a/app/src/main/res/layout/fragment_spiral_right.xml
+++ b/app/src/main/res/layout/fragment_spiral_right.xml
@@ -18,19 +18,21 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
-    <android.support.constraint.ConstraintLayout
+    <LinearLayout
         android:id="@+id/spiral_graph"
         android:layout_width="match_parent"
         android:layout_height="430dp"
         android:layout_marginEnd="@dimen/patientListMargin"
         android:layout_marginStart="@dimen/patientListMargin"
         android:layout_marginTop="@dimen/patientListMargin2"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" >
+        app:layout_constraintTop_toBottomOf="@+id/textView3"
+        android:orientation="vertical">
 
         <android.support.design.widget.TabLayout
             android:id="@+id/measure"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toTopOf="parent">
 
         </android.support.design.widget.TabLayout>
         <com.jjoe64.graphview.GraphView
@@ -38,7 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent">
         </com.jjoe64.graphview.GraphView>
-    </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/textView4"
