--- a/app/src/main/res/menu/personal_patient_toolbar.xml
+++ b/app/src/main/res/menu/personal_patient_toolbar.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/add"
+        android:id="@+id/edit_patient"
         android:icon="@drawable/baseline_more_horiz_black_24"
         android:title="Item"
         app:showAsAction="always" />
